<resources>
    <string name="app_name">Mobile Mechanics</string>
    <string name="title_dashboard">Add cars</string>
    <string name="title_notifications">Profile</string>
    <string name="title_home">My cars</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_gps">Btn_gps</string>
    <string name="search_repairs">search repairs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Messages">Messages</string>
    <string name="mecanicfav">Favorite Mechanics</string>
    <string name="lastRepairs">Previus Repairs</string>
    <string name="support">Support</string>
    <string name="removecar">Remove car</string>
    <string name="OnGoingRepair">On Going Repair</string>
</resources>