<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.cars.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_TypeRepairListView"
            app:destination="@id/TypeRepairListView" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_date_picker2"
            app:destination="@id/navigation_date_picker" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.myapplication.ui.addCars.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.ui.profile.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_date_picker"
        android:name="com.example.myapplication.ui.DatePickerFragment"
        android:label="Pick date"
        tools:layout="@layout/fragment_date_picker" />

    <fragment
        android:id="@+id/TypeRepairListView"
        android:name="com.example.myapplication.ui.TypeRepairFragment"
        android:label="Repairs"
        android:layout="@layout/fragment_type_repair" />
</navigation>